fixed scroll on mobile devices

--- a/src/component/gallery-main/gallery-main.component.scss
+++ b/src/component/gallery-main/gallery-main.component.scss
@@ -2,7 +2,6 @@ gallery-main {
   flex: 1;
   width: 100%;
   display: flex;
-  overflow: hidden;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -12,8 +11,6 @@ gallery-main {
 }
 
 .g-container {
-  overflow: hidden;
-  position: relative;
   display: flex;
   height: 100vh;
   width: 100vw;
@@ -26,7 +23,6 @@ gallery-main {
   flex-direction: column;
   flex: 1;
   height: 100%;
-  //margin: 0.5em;
   box-sizing: border-box;
 }
 
