--- a/src/demo/styles.scss
+++ b/src/demo/styles.scss
@@ -9,8 +9,6 @@ html, body {
 app-root {
   height: 100%;
   gallery {
-    overflow-y: hidden;
-    overflow-x: hidden;
     display: flex;
     height: 100%;
     > div {
